--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ footer {
 .logo-second-part {
   color: #f4f4fd;
 }
-.footer-text {
+.page-footer {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
