--- a/css/styles.css
+++ b/css/styles.css
@@ -14,17 +14,16 @@ ol {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
-  text-transform: uppecase;
-  color: #2e2f42;
+  text-transform: uppercase;
+  color: #4d5ae5;
 }
 .logo-part {
-  color: #4d5ae5;
+  color: #2e2f42;
 }
 .nav-link {
   font-weight: 500;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
@@ -52,7 +51,7 @@ ol {
 .title-main {
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.07143;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
@@ -64,6 +63,7 @@ ol {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
+  cursor: pointer;
 }
 .btn:hover,
 .btn:focus {
@@ -89,13 +89,13 @@ ol {
 .title-team {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
 }
-.title-team-members {
+.team-member {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -114,10 +114,7 @@ ol {
 footer {
   background-color: #2e2f42;
 }
-.logo-first-part {
-  color: #4d5ae5;
-}
-.logo-second-part {
+.logo-second {
   color: #f4f4fd;
 }
 .page-footer {
