--- a/css/styles.css
+++ b/css/styles.css
@@ -69,12 +69,13 @@ ol {
 .btn:focus {
   background-color: #404bbf;
 }
-.title-benefits {
+.benefit-item {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  background: #fff;
 }
 .title-benefits-text {
   font-weight: 400;
@@ -111,7 +112,30 @@ ol {
   text-align: center;
   color: #434455;
 }
-footer {
+.portfolio {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11111;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-align: center;
+  color: #2e2f42;
+}
+.portfolio-item {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.portfolio-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+.section-footer {
   background-color: #2e2f42;
 }
 .logo-second {
