--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ ol {
   color: #fff;
 }
 .btn {
+  font-family: inherit;
   background-color: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
@@ -78,11 +79,9 @@ ol {
   background: #fff;
 }
 .title-benefits-text {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
 }
 .section-team {
   background: #f4f4fd;
@@ -105,12 +104,10 @@ ol {
   color: #2e2f42;
 }
 .team-profession {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
-  color: #434455;
 }
 .portfolio {
   font-weight: 700;
@@ -129,11 +126,9 @@ ol {
   color: #2e2f42;
 }
 .portfolio-text {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
 }
 .section-footer {
   background-color: #2e2f42;
