--- a/css/styles.css
+++ b/css/styles.css
@@ -102,12 +102,14 @@ ol {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  background: #fff;
 }
 .team-profession {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  background: #fff;
 }
 .portfolio {
   font-weight: 700;
